@@ -1,4 +1,7 @@
-$Id: CHANGES,v 1.36 2005/02/19 18:57:54 lutchann Exp $
+$Id: CHANGES,v 1.37 2005/03/22 10:29:13 psavola Exp $
+
+03/22/2005	Be a bit more informative about config file parsing
+		errors.
 
 02/21/2005	Release 0.7.3.
 
